--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: bill) do |form| %>
+<%= form_with(model: bill, url: category_bills_path(@category)) do |form| %>
   <% if bill.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(bill.errors.count, "error") %> prohibited this bill from being saved:</h2>
@@ -21,14 +21,10 @@
     <%= form.text_field :amount %>
   </div>
 
-  <div>
-    <%= form.label :author_id, style: "display: block" %>
-    <%= form.number_field :author_id %>
-  </div>
+  <%= form.hidden_field :author_id, value: current_user.id %>
 
   <div>
-    <%= form.label :category_id, style: "display: block" %>
-    <%= form.text_field :category_id %>
+    <%= form.hidden_field :category_id, value: @category.id %>
   </div>
 
   <div>
