--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,10 +1,9 @@
-<p style="color: green"><%= notice %></p>
+<div class="card my-4">
+  <div class="card-body">
+    <%= render @bill %>
+  </div>
+</div>
 
-<%= render @bill %>
-
-<div>
-  <%= link_to "Edit this bill", edit_bill_path(@bill) %> |
-  <%= link_to "Back to bills", bills_path %>
-
-  <%= button_to "Destroy this bill", @bill, method: :delete %>
+<div class="d-flex justify-content-end">
+  <%= link_to "Back to bills", category_bills_path(@category), class: "btn btn-secondary" %>
 </div>
