--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,14 @@
+<style>
+  .menu1 > li > a {
+    text-decoration: none;
+  }
+
+  .menu1 >li > a:hover {
+    font-size: 2em
+  }
+  
+</style>
+
 <nav class="navbar">
   <div class="navbar__menu-container">
     <nav role="navigation">
@@ -6,7 +17,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <ul id="menu">
+        <ul id="menu" class="menu1">
           <li><%= link_to "Home", category_path(current_user.id) %></li>
           <li><%= link_to "Profile", edit_user_path(current_user) %></li>
           <li><a href="#">About</a></li>
