--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -2,7 +2,7 @@
 
 body {
   /* Apply blue gradient background */
-  background: linear-gradient(to bottom, #0080ff, #0000ff);
+  background: linear-gradient(to bottom, #0080ff, #00f);
   margin: 0;
   display: flex;
   align-items: center;
