--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,6 +2,9 @@
   <% @categories.each do |category| %>
     <%= link_to category_bills_path(category), class: "card my-4", style: "text-decoration: none; color: #555;" do %>
       <div class="card-body">
+        <div class="icon">
+          <i class="material-icons"><%= category.icon %></i>
+        </div>
         <h2 class="card-title"><%= category.name %></h2>
         <p class="card-text">Total Amount: <%= category.bills.sum(:amount) %></p>
       </div>
