--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,6 +33,6 @@
 
   <div class="navbar__search-container">
     <input placeholder='Search...' class='search js-search' type="text">
-    <i class="fa fa-search"></i>
+    <i class="fa fa-search fasearch"></i>
   </div>
 </nav>
