--- a/app/views/splash/show.html.erb
+++ b/app/views/splash/show.html.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div class="buttons">
+  <h1>Budget Planner</h1>
     <%= link_to "Log in", new_user_session_path, class: "button" %>
     <%= link_to "Sign up", new_user_registration_path, class: "button" %>
   </div>
